Fix layout issues.

--- a/refinery/static/source/styles/less/refinery-style.less
+++ b/refinery/static/source/styles/less/refinery-style.less
@@ -254,6 +254,15 @@ ul#externalToolListPopover li{
   width: 100%;
 }
 
+.btn.disabled, .btn-default[disabled] {
+  cursor: default;
+  background-image: none;
+  opacity: .65;
+  filter: alpha(opacity=65);
+  box-shadow: none;
+  background-color: #e6e6e6;
+}
+
 #isa-header {
   display: block;
   width: 100%;
